static/css/style.css
/* ... */
.about-us .description .quote {
  background-color: #F9F9FF;
  padding: 20px;
  border-radius: 20px;
  margin-top: 30px;
  margin-bottom: 30px;
  text-align: center;
}

.about-us .description .quote i {
  font-size: 30px;
  color: var(--mint);
}

.about-us .description .quote p {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 16px;
  color: #152035;
  font-weight: 900;
}

.about-us .description .quote small {
  color: #506172;
  font-weight: 400;
}

/* ------------------------------
		contact
------------------------------ */
.contact {
  background-color: #ffffff !important;
  padding: 30px;
  border-radius: 20px !important;
  margin-bottom: 60px;
  display: block;
  position: relative;
  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
          box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
  -webkit-transition: all 0.9s ease-in-out;
  transition: all 0.9s ease-in-out;
}

.contact .google-map {
  margin-top: -60px;
  margin-bottom: 50px;
  position: relative;
  overflow: hidden;
  -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.08), 0 0 0 transparent;
          box-shadow: 0 10px 10px rgba(0, 0, 0, 0.08), 0 0 0 transparent;
  line-height: 0;
  border: 0;
  border-radius: 20px;
}

.contact .google-map iframe {
  width: 100%;
  height: 400px;
  border: 0;
  border-radius: 20px;
  -webkit-transition: all 0.9s ease-in-out;
  transition: all 0.9s ease-in-out;
}

.contact_form h6 {
  font-size: 18px;
  margin-bottom: 10px;
}

/* ------------------------------
		Footer
------------------------------ */
.footer {
  background-color: #ffffff;
}

.footer .copyright {
  padding: 30px 0;
  border-top: 1px solid rgba(21, 32, 53, 0.1);
}

.footer .copyright p {
  margin-bottom: 0;
  font-size: 14px;
  text-align: center;
  color: #506172;
}

.footer .copyright p a {
  font-weight: 700;
}

.footer .copyright p a:hover {
  color: var(--mint);
}

.footer .back {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

.footer .back .back-top {
  width: 45px;
  height: 45px;
  background-color: var(--mint);
  position: fixed;
  bottom: 15px;
  right: 30px;
  border-radius: 50%;
  z-index: 9;
  display: none;
  text-align: center;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  border: 1px solid var(--mint);
}

.footer .back .back-top i {
  color: #ffffff;
  line-height: 45px;
  font-size: 16px;
  text-align: center;
  font-weight: 700;
}

.footer .back .back-top:hover {
  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
          box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
  background-color: transparent;
  border: 1px solid var(--mint);
}

.footer .back .back-top:hover i {
  color: var(--mint);
}



/* -----------------------------
		 Go Deeper
--------------------------------- */
.topic-image img{
  border-radius: 1rem;
  object-fit: cover;
  width: 264px;
  height: 150px;

}

.topic-image img {
	-webkit-transform: scale(1.5);
	transform: scale(1.5);
	-webkit-transition: .3s ease-in-out;
	transition: .3s ease-in-out;
}



.btn-primary {
  padding: 2px 35px;
  line-height: 32px;
  border-radius: 30px;
  background-color: var(--mint);
  border: none;
  text-transform: uppercase;
  font-weight: 700;
}

.btn-primary:hover {
  background-color: #000;
  color: #fff;
}

/* -----------------------------
		 Preloader 
--------------------------------- */
.loading {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: #F9F9FF;
  z-index: 99999;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.loading .circle {
  margin: auto;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: var(--mint);
  -webkit-animation: load 0.9s infinite linear;
          animation: load 0.9s infinite linear;
}

@-webkit-keyframes load {
  0% {
    -webkit-transform: scale(0.5);
            transform: scale(0.5);
  }
  50% {
    -webkit-transform: scale(1.2);
            transform: scale(1.2);
  }
  100% {
    -webkit-transform: scale(0);
            transform: scale(0);
  }
}

@keyframes load {
  0% {
    -webkit-transform: scale(0.5);
            transform: scale(0.5);
  }
  50% {
    -webkit-transform: scale(1.2);
            transform: scale(1.2);
  }
  100% {
    -webkit-transform: scale(0);
            transform: scale(0);
  }
}

/* ------------------------------
		 Responsive 
------------------------------ */
@media screen and (max-width: 991px) {
  .navbar .container {
    position: relative;
  }
  .navbar-right {
    position: absolute;
    right: 15px;
    top: 15px;
  }
  .navbar-nav {
    padding-top: 15px;
  }
  .navbar .nav-item {
    -webkit-box-shadow: none;
            box-shadow: none;
    margin-bottom: 15px;
    background-color: #F9F9FF;
    -webkit-transition: all 0.7s ease-in-out;
    transition: all 0.7s ease-in-out;
  }
  .navbar .nav-item:hover, .navbar .nav-item.active {
    color: var(--mint);
  }
  .navbar .nav-item .nav-link {
    margin-bottom: 15px;
  }
  .navbar .nav-item:last-child .nav-link {
    margin-bottom: 0px;
  }
  .masonry-layout .card-columns {
    -webkit-column-count: 2;
    column-count: 2;
  }
  .max-width {
    margin: auto;
    width: 600px;
    margin-bottom: 20px;
  }
}

@media screen and (max-width: 768px) {
  .masonry-layout .card-columns,
  .col2-layout .card-columns {
    -webkit-column-count: 1;
    column-count: 1;
  }
  .search-form {
    width: 100%;
  }
  .search-form input {
    width: calc(100% - 100px);
  }
  .inner-width,
  .newslettre-width {
    width: auto;
    margin: auto;
  }
  .search .close {
    right: 30px;
  }
  .carousel-hero .owl-nav {
    display: none;
  }
}
/* ... */

